# rogue-algebra

./: Cargo.toml  flake.nix
src/: fov.rs  lib.rs  path.rs
