[package]
name = "rogue-algebra"
version = "0.1.0"
edition = "2021"

[features]
default = []
bevy16 = ["bevy16_math"]

[dependencies]
rand = { version = "0.8", default-features = false }
bevy16_math = { package = "bevy_math", version = "0.16.0", optional = true, default-features = false }

[dev-dependencies]
rand = { version = "0.8" }
