[package]
name = "rogue-algebra"
version = "0.1.0"
edition = "2021"

[features]
default = []
bevy_18 = ["bevy_18_math"]

[dependencies]
rand = { version = "0.9", default-features = false }
bevy_18_math = { package = "bevy_math", version = "0.18.0", optional = true, default-features = false, features = ["std"] }

[dev-dependencies]
rand = { version = "0.9" }
